# reversi

./: .gitignore  README.md  Reversi.cabal  package.yaml  reversi.cabal  stack.yaml
app/ai/: Main.hs
app/random/: Main.hs
app/two-player/: Main.hs
src/: .ghci  Actions.hs  Board.hs  GameTree.hs  Heuristic.hs  Main.hs  NewAction.hs  OldMain.hs  Types.hs  test.hs
src/Reversi/: Actions.hs  Board.hs  GameTree.hs  Heuristic.hs  Types.hs
tests/: .ghci  ActionsSpec.hs  BoardSpec.hs  Test.hs  TypesSpec.hs
tests/Reversi/: ActionsSpec.hs
testsuite/tests/: .ghci  Test.hs
