name:                Reversi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Reversi#readme
license:             BSD3
license-file:        LICENSE
author:              Rashad Gover
maintainer:          rashad.sasaki@gmail.com
copyright:           2018 Rashad Gover
category:            CLI Application
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Reversi
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

test-suite Tests
  hs-source-dirs:      tests
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
